syntax = "proto2";
package hw.trezor.messages.thp;

// Sugar for easier handling in Java
option java_package = "com.satoshilabs.trezor.lib.protobuf";
option java_outer_classname = "TrezorMessageThp";


/**
 * Only for internal use.
 * @embed
 */
 message ThpCredentialMetadata {
    optional string host_name = 1;     // Human-readable host name
}

/**
 * Only for internal use.
 * @embed
 */
 message ThpPairingCredential {
    optional ThpCredentialMetadata cred_metadata = 1; // Credential metadata
    optional bytes mac = 2;                           // Message authentication code generated by the Trezor
}

/**
 * Only for internal use.
 * @embed
 */
 message ThpAuthenticatedCredentialData {
    optional bytes host_static_pubkey = 1;            // Host's static public key used in the handshake
    optional ThpCredentialMetadata cred_metadata = 2; // Credential metadata
}
